# libg2o-release

./: 0001-Added-install-rule-for-package.xml.patch  CMakeLists.txt  README.md  debian.store  package.xml  patches.conf  releaser_history.json  rpm.store  tracks.yaml
debian/: changelog  control  copyright  gbp.conf  rules
eloquent/: package.xml
rpm/: ros-galactic-libg2o.spec  ros-lyrical-libg2o.spec  ros-rolling-libg2o.spec  template.spec
